tests/lifetime/loan/branch_of_ref_moves_both_params_leak.err.expected
error: at 5:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry__to__fbr': reference 'x' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 5 |             branch(copy b) [true: t, false: fbr]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
   |
 2 |         fn f(x: &out i64, y: &out i64, b: bool) {
   |              ^^^^^^^^^^^
error: at 5:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry__to__t': reference 'y' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 5 |             branch(copy b) [true: t, false: fbr]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
   |
 2 |         fn f(x: &out i64, y: &out i64, b: bool) {
   |                           ^^^^^^^^^^^
