tests/lifetime/loan/branch_of_ref_moves_both_params_leak.sim

        fn f(x: &out i64, y: &out i64, b: bool) {
          z: &out i64;
          entry:
            branch(copy b) [true: t, false: fbr]
          t:
            z = move x;
            z.* = 1;
            goto end
          fbr:
            z = move y;
            z.* = 2;
            goto end
          end:
            return
        }
        